internal/dataplane/testdata/golden/tcproute-example/expression-routes-on_golden.yaml
_format_version: "3.0"
services:
- connect_timeout: 60000
  host: tcproute.tcp-namespace.echo-plaintext.0
  id: e2302e1e-0a75-5174-82f3-c0bc379a108a
  name: tcproute.tcp-namespace.echo-plaintext.0
  protocol: tcp
  read_timeout: 60000
  retries: 5
  routes:
  - expression: net.dst.port == 1025
    https_redirect_status_code: 426
    id: 499ad8b6-ea05-5418-b1b7-7386a13d333b
    name: tcproute.tcp-namespace.echo-plaintext.0.0
    priority: 1
    protocols:
    - tcp
    tags:
    - k8s-name:echo-plaintext
    - k8s-namespace:tcp-namespace
    - k8s-kind:TCPRoute
    - k8s-group:gateway.networking.k8s.io
    - k8s-version:v1alpha2
  tags:
  - k8s-name:UNKNOWN
  - k8s-namespace:UNKNOWN
  - k8s-kind:Service
  - k8s-uid:00000000-0000-0000-0000-000000000000
  - k8s-group:core
  - k8s-version:v1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  name: tcproute.tcp-namespace.echo-plaintext.0
  tags:
  - k8s-name:UNKNOWN
  - k8s-namespace:UNKNOWN
  - k8s-kind:Service
  - k8s-uid:00000000-0000-0000-0000-000000000000
  - k8s-group:core
  - k8s-version:v1
