internal/dataplane/testdata/golden/tcproute-example/in.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-tcp-gateway
  namespace: tcp-example
spec:
  listeners:
  - name: tcp
    protocol: TCP
    port: 1025
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: echo-plaintext
  namespace: tcp-namespace
spec:
  parentRefs:
  - name: example-tcp-gateway
    namespace: tcp-example
  rules:
  - backendRefs:
    - name: echo
      port: 1025
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: tcp-namespace
  labels:
    app: echo
spec:
  ports:
    - port: 1025
      name: tcp
      protocol: TCP
      targetPort: 1025
    - port: 1026
      name: udp
      protocol: TCP
      targetPort: 1026
    - port: 1027
      name: http
      protocol: TCP
      targetPort: 1027
  selector:
    app: echo
